# vault-ui

./: .dark-factory.yaml  .gitignore  CHANGELOG.md  Makefile  README.md  config.yaml.example  pyproject.toml
docs/: launchd-service.md
prompts/completed/: 001-fix-defer-date-parsing.md  002-use-vault-cli-for-defer-complete.md  003-vault-cli-fast-path-ui.md  004-clean-dead-claude-paths.md  005-migrate-update-phase-to-vault-cli.md  006-remove-session-manager-simple-ops.md  007-a-fix-lint-and-move-imports.md  008-b-fix-config-sys-exit.md  009-c-fix-broadcast-race.md  010-d-delete-dead-executor.md  011-e-cleanup-factory-dead-code.md  012-f-add-status-cache-count.md  013-g-deduplicate-task-reader.md  014-h-fix-readme.md  015-i-migrate-claude-agent-sdk.md  016-spec-001-stale-session-cleanup.md  017-spec-001-session-cleaner.md  018-spec-001-startup-integration.md  019-cleanup-duplicate-session-cleaner.md  020-inherit-vault-config-from-vault-cli.md  021-assignee-based-session-cleanup.md  022-inherit-claude-script-from-vault-cli.md  023-a-replace-session-manager-with-vault-cli.md  024-b-replace-task-reader-with-vault-cli.md  025-c-replace-file-watcher-with-vault-cli.md  026-spec-002-date-urgency-visualization.md  027-spec-003-session-resolver.md  028-spec-003-cleanup-uuid-aware.md  029-spec-003-watcher-resolution.md  030-multi-vault-selector.md  (+35 more)
tests/: conftest.py  test_api.py  test_cleanup.py  test_config.py  test_cross_view_leak.py  test_goal_card_cleanup.py  test_groupby_selector.py  test_hierarchy.py  test_main.py  test_session_resolver.py  test_task_reader.py  test_vault_cli_watcher.py  test_view_toggle.py  test_websocket_routing.py
(+67 files in other folders)
